Forces scrollbar on all HTML pages to prevent layout from jumping between short and long pages

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -14,3 +14,7 @@ footer {
   padding: 20px 0;
   text-align: center;
 }
+
+html {
+  overflow-y: scroll;
+}
